course_episodes controller added. working on episodes list view

--- a/public/404.html
+++ b/public/404.html
@@ -83,7 +83,9 @@
         <h3>
             صفحه مورد نظر پیدا نشد.
         </h3>
-        <a class="button" href="/">برگشت</a>
+        <a class="button" href="/">
+            صفحه اصلی
+        </a>
     </div>
 </body>
 
