--- a/public/404.html
+++ b/public/404.html
@@ -83,9 +83,9 @@
         <h3>
             صفحه مورد نظر پیدا نشد.
         </h3>
-        <a class="button" href="/">
-            صفحه اصلی
-        </a>
+        <button class="button" onclick="window.history.back()">
+            برگشت
+        </button>
     </div>
 </body>
 
